--- a/s3pi Extras/Extensions/trunk/Extensions.csproj
+++ b/s3pi Extras/Extensions/trunk/Extensions.csproj
@@ -33,12 +33,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="s3pi.Interfaces">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Program Files\Common Files\s3pi\s3pi.Interfaces.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyVersion.cs" />
     <Compile Include="ExtList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TGIN.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\..\s3pi\gpl-3.0.txt">
