--- a/s3pi/trunk/Package/Package.csproj
+++ b/s3pi/trunk/Package/Package.csproj
@@ -49,19 +49,19 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Interfaces\Interfaces.csproj">
+    <ProjectReference Include="..\Interfaces\Interfaces.csproj">
       <Project>{51023BD2-9139-438D-B794-95E5EC023537}</Project>
       <Name>Interfaces</Name>
       <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\..\Settings\Settings.csproj">
+    <ProjectReference Include="..\Settings\Settings.csproj">
       <Project>{374F37CF-1F27-4613-96FD-9B956A3D82B1}</Project>
       <Name>Settings</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\..\gpl-3.0.txt">
+    <Content Include="..\gpl-3.0.txt">
       <Link>gpl-3.0.txt</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
