--- a/s3pi Extras/DemoPlugins/trunk/DemoPlugins.csproj
+++ b/s3pi Extras/DemoPlugins/trunk/DemoPlugins.csproj
@@ -47,7 +47,7 @@
       <Link>gpl-3.0.txt</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="DemoPlugins.txt">
+    <Content Include="Helpers.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
