--- a/CS System Classes/trunk/CS System Classes.csproj
+++ b/CS System Classes/trunk/CS System Classes.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="ADependentList.cs" />
     <Compile Include="ArgumentLengthException.cs" />
+    <Compile Include="AHandlerList.cs" />
     <Compile Include="Properties\AssemblyVersion.cs" />
     <Compile Include="Boolset.cs" />
     <Compile Include="ICloneableWithParent.cs" />
