--- a/s3pi Wrappers/StblResource/trunk/StblResource.csproj
+++ b/s3pi Wrappers/StblResource/trunk/StblResource.csproj
@@ -42,6 +42,7 @@
   -->
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\AssemblyVersion.cs" />
     <Compile Include="StblResource.cs" />
   </ItemGroup>
   <ItemGroup>
