--- a/CS System Classes/trunk/CS System Classes.csproj
+++ b/CS System Classes/trunk/CS System Classes.csproj
@@ -12,7 +12,7 @@
     <AssemblyName>System.Custom</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>GAKkey.snk.pfx</AssemblyOriginatorKeyFile>
     <RunPostBuildEvent>
     </RunPostBuildEvent>
