--- a/s3pi Extras/DemoPlugins/trunk/DemoPlugins.csproj
+++ b/s3pi Extras/DemoPlugins/trunk/DemoPlugins.csproj
@@ -12,7 +12,7 @@
     <AssemblyName>s3pi.DemoPlugins</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>GACkey.snk.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
