Set artefact to s3pi.CustomForms

--- a/s3pi Extras/CustomForms/trunk/CustomForms.csproj
+++ b/s3pi Extras/CustomForms/trunk/CustomForms.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>System.Windows.Forms</RootNamespace>
-    <AssemblyName>s3pi.CopyableMessageBox</AssemblyName>
+    <AssemblyName>s3pi.CustomForms</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <StartupObject>
