New FTPT RCOL chunk

--- a/s3pi Wrappers/GenericRCOLResource/trunk/GenericRCOLResource.csproj
+++ b/s3pi Wrappers/GenericRCOLResource/trunk/GenericRCOLResource.csproj
@@ -81,6 +81,7 @@ echo /*"*/ [assembly: AssemblyVersion(%25version%25)] /*"*/
   <ItemGroup>
     <Compile Include="ARCOLBlock.cs" />
     <Compile Include="DefaultRCOL.cs" />
+    <Compile Include="FTPT.cs" />
     <Compile Include="GenericRCOLResource.cs" />
     <Compile Include="IRCOLBlock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
