--- a/s3pi Extras/CustomForms/trunk/CustomForms.csproj
+++ b/s3pi Extras/CustomForms/trunk/CustomForms.csproj
@@ -34,8 +34,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CopyableMessageBox.cs">
@@ -45,14 +47,42 @@
       <DependentUpon>CopyableMessageBox.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResourceTypeCombo\ResourceTypeCombo.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ResourceTypeCombo\ResourceTypeCombo.Designer.cs">
+      <DependentUpon>ResourceTypeCombo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TGIBlockListEditor\MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TGIBlockListEditor\MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="CopyableMessageBox.resx">
       <DependentUpon>CopyableMessageBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ResourceTypeCombo\ResourceTypeCombo.resx">
+      <DependentUpon>ResourceTypeCombo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TGIBlockListEditor\MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\CS System Classes\CS System Classes.csproj">
       <Project>{00200E76-C245-42A7-B567-5C30EDBCE977}</Project>
       <Name>CS System Classes</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\..\s3pi\Interfaces\Interfaces.csproj">
+      <Project>{51023BD2-9139-438D-B794-95E5EC023537}</Project>
+      <Name>Interfaces</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\Extensions\Extensions.csproj">
+      <Project>{9B4C57BA-E09F-4439-98B4-B9B535A4ABF6}</Project>
+      <Name>Extensions</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
