Another attempt at getting IGenericAdd to work.  Seems more successful like this.

--- a/s3pi/trunk/Interfaces/Interfaces.csproj
+++ b/s3pi/trunk/Interfaces/Interfaces.csproj
@@ -36,6 +36,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AApiVersionedFields.cs" />
@@ -43,6 +45,7 @@
     <Compile Include="APackage.cs" />
     <Compile Include="AResource.cs" />
     <Compile Include="AResourceHandler.cs" />
+    <Compile Include="IGenericAdd.cs" />
     <Compile Include="Properties\AssemblyVersion.cs" />
     <Compile Include="IApiVersion.cs" />
     <Compile Include="IContentFields.cs" />
