--- a/s3pi Wrappers/GenericRCOLResource/trunk/GenericRCOLResource.csproj
+++ b/s3pi Wrappers/GenericRCOLResource/trunk/GenericRCOLResource.csproj
@@ -80,17 +80,20 @@ echo /*"*/ [assembly: AssemblyVersion(%25version%25)] /*"*/
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ARCOLBlock.cs" />
-    <Compile Include="DefaultRCOL.cs" />
-    <Compile Include="FTPT.cs" />
+    <Compile Include="RCOLChunkHandlers\DefaultRCOL.cs" />
+    <Compile Include="RCOLChunkHandlers\FTPT.cs" />
     <Compile Include="GenericRCOLResource.cs" />
     <Compile Include="IRCOLBlock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyVersion.cs" />
-    <Compile Include="VPXY.cs" />
+    <Compile Include="RCOLChunkHandlers\VPXY.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="RCOLResources.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="RCOLChunkHandlers\" />
   </ItemGroup>
 </Project>
