--- a/s3pi/trunk/Interfaces/Interfaces.csproj
+++ b/s3pi/trunk/Interfaces/Interfaces.csproj
@@ -33,6 +33,8 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -45,6 +47,7 @@
     <Compile Include="APackage.cs" />
     <Compile Include="AResource.cs" />
     <Compile Include="AResourceHandler.cs" />
+    <Compile Include="ElementPriorityAttribute.cs" />
     <Compile Include="IGenericAdd.cs" />
     <Compile Include="Properties\AssemblyVersion.cs" />
     <Compile Include="IApiVersion.cs" />
