New TGIBlockCombo.  Used to edit TGIBlock indexes by selecting a TGIBlock from a provided TGIBlockList, allowing the list to be edited, too.

--- a/s3pi Extras/CustomForms/trunk/CustomForms.csproj
+++ b/s3pi Extras/CustomForms/trunk/CustomForms.csproj
@@ -53,6 +53,12 @@
     <Compile Include="ResourceTypeCombo\ResourceTypeCombo.Designer.cs">
       <DependentUpon>ResourceTypeCombo.cs</DependentUpon>
     </Compile>
+    <Compile Include="TGIBlockCombo\TGIBlockCombo.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TGIBlockCombo\TGIBlockCombo.Designer.cs">
+      <DependentUpon>TGIBlockCombo.cs</DependentUpon>
+    </Compile>
     <Compile Include="TGIBlockListEditor\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,6 +70,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ResourceTypeCombo\ResourceTypeCombo.resx">
       <DependentUpon>ResourceTypeCombo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TGIBlockCombo\TGIBlockCombo.resx">
+      <DependentUpon>TGIBlockCombo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TGIBlockListEditor\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
