--- a/s3pi/trunk/Interfaces/Interfaces.csproj
+++ b/s3pi/trunk/Interfaces/Interfaces.csproj
@@ -38,8 +38,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AApiVersionedFields.cs" />
@@ -57,6 +55,7 @@
     <Compile Include="IResourceIndexEntry.cs" />
     <Compile Include="IResourceHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringTableSingleton.cs" />
     <Compile Include="TypedValue.cs" />
     <Compile Include="VersionAttribute.cs" />
   </ItemGroup>
