Add new interface (IResourceKey) and abstract class (AResourceKey) to handle splitting out of EPFlags (an enum, defined in IResourceKey.cs) from ResourceGroup.

--- a/s3pi/trunk/Interfaces/Interfaces.csproj
+++ b/s3pi/trunk/Interfaces/Interfaces.csproj
@@ -45,8 +45,10 @@
     <Compile Include="APackage.cs" />
     <Compile Include="AResource.cs" />
     <Compile Include="AResourceHandler.cs" />
+    <Compile Include="AResourceKey.cs" />
     <Compile Include="ElementPriorityAttribute.cs" />
     <Compile Include="IGenericAdd.cs" />
+    <Compile Include="IResourceKey.cs" />
     <Compile Include="Properties\AssemblyVersion.cs" />
     <Compile Include="IApiVersion.cs" />
     <Compile Include="IContentFields.cs" />
