New DataGridExpandableAttribute to indicate a collection should be shown as expandable instead of a popup in the s3pe Grid.

--- a/s3pi/trunk/Interfaces/Interfaces.csproj
+++ b/s3pi/trunk/Interfaces/Interfaces.csproj
@@ -46,6 +46,7 @@
     <Compile Include="AResource.cs" />
     <Compile Include="AResourceHandler.cs" />
     <Compile Include="AResourceKey.cs" />
+    <Compile Include="DataGridExpandableAttribute.cs" />
     <Compile Include="ElementPriorityAttribute.cs" />
     <Compile Include="IGenericAdd.cs" />
     <Compile Include="IResourceKey.cs" />
