--- a/s3pi Extras/DemoPlugins/trunk/DemoPlugins.csproj
+++ b/s3pi Extras/DemoPlugins/trunk/DemoPlugins.csproj
@@ -41,6 +41,7 @@
     <Compile Include="DemoPlugins.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyVersion.cs" />
+    <Compile Include="RunHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\..\s3pi\gpl-3.0.txt">
@@ -63,6 +64,11 @@
     <ProjectReference Include="..\..\s3pi\WrapperDealer\WrapperDealer.csproj">
       <Project>{FE111523-3266-409B-BC72-F8D4A909A554}</Project>
       <Name>WrapperDealer</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\CustomForms\CustomForms.csproj">
+      <Project>{7314C38A-1519-4C58-998E-C88E4DA91086}</Project>
+      <Name>CustomForms</Name>
       <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\Extensions\Extensions.csproj">
