--- a/s3pi Wrappers/GenericRCOLResource/trunk/GenericRCOLResource.csproj
+++ b/s3pi Wrappers/GenericRCOLResource/trunk/GenericRCOLResource.csproj
@@ -86,6 +86,9 @@ echo /*"*/ [assembly: AssemblyVersion(%25version%25)] /*"*/
     <Compile Include="IRCOLBlock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyVersion.cs" />
+    <Compile Include="RCOLChunkHandlers\MATD.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="RCOLChunkHandlers\VPXY.cs" />
   </ItemGroup>
   <ItemGroup>
