--- a/s3pi Extras/CustomForms/trunk/CustomForms.csproj
+++ b/s3pi Extras/CustomForms/trunk/CustomForms.csproj
@@ -42,10 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CopyableMessageBox.cs">
+    <Compile Include="CopyableMessageBox\CopyableMessageBox.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CopyableMessageBox.Designer.cs">
+    <Compile Include="CopyableMessageBox\CopyableMessageBox.designer.cs">
       <DependentUpon>CopyableMessageBox.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -67,7 +67,7 @@
     <Compile Include="TGIBlockListEditor\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="CopyableMessageBox.resx">
+    <EmbeddedResource Include="CopyableMessageBox\CopyableMessageBox.resx">
       <DependentUpon>CopyableMessageBox.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ResourceTypeCombo\ResourceTypeCombo.resx">
