Rewrite: split Helpers.txt into Helpers/*.helper.  Leave it up to the caller to decide how many matches to use.

--- a/s3pi Extras/DemoPlugins/trunk/DemoPlugins.csproj
+++ b/s3pi Extras/DemoPlugins/trunk/DemoPlugins.csproj
@@ -69,7 +69,22 @@
       <Link>gpl-3.0.txt</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Helpers.txt">
+    <None Include="Helpers\Notepad.helper">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Helpers\MSPaint.helper">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Helpers\s3pe_OBJKResourceEditor.helper">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Helpers\s3pe_STBLResourceEditor.helper">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Helpers\s3pe_VPXYResourceEditor.helper">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <Content Include="Helpers\Helpers.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
