--- a/s3pi Wrappers/GenericRCOLResource/trunk/GenericRCOLResource.csproj
+++ b/s3pi Wrappers/GenericRCOLResource/trunk/GenericRCOLResource.csproj
@@ -101,6 +101,7 @@ echo /*"*/ [assembly: AssemblyVersion(%25version%25)] /*"*/
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ARCOLBlock.cs" />
+    <Compile Include="RCOLChunkHandlers\SlotAdjust.cs" />
     <Compile Include="RCOLChunkHandlers\RSLT.cs" />
     <Compile Include="RCOLChunkHandlers\LITE.cs" />
     <Compile Include="RCOLChunkHandlers\DefaultRCOL.cs" />
