--- a/s3pi Wrappers/CASPartResource/trunk/CASPartResource.csproj
+++ b/s3pi Wrappers/CASPartResource/trunk/CASPartResource.csproj
@@ -55,9 +55,12 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CASPartFlags.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="FaceClothingResource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyVersion.cs" />
-    <Compile Include="CASPartResource.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\CS System Classes\CS System Classes.csproj">
