Rename CASPartResource to FaceClothingResource; new CASPartResource wrapper; add unknowns to AgeGender flags.

--- a/s3pi Wrappers/CASPartResource/trunk/CASPartResource.csproj
+++ b/s3pi Wrappers/CASPartResource/trunk/CASPartResource.csproj
@@ -55,6 +55,9 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CASPartResource.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="CASPartFlags.cs">
       <SubType>Code</SubType>
     </Compile>
