--- a/s3pi Wrappers/CASPartResource/trunk/CASPartResource.csproj
+++ b/s3pi Wrappers/CASPartResource/trunk/CASPartResource.csproj
@@ -64,6 +64,7 @@
     <Compile Include="FaceClothingResource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyVersion.cs" />
+    <Compile Include="SimOutfitResource.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\CS System Classes\CS System Classes.csproj">
