--- a/s3pi Extras/CustomForms/trunk/CustomForms.csproj
+++ b/s3pi Extras/CustomForms/trunk/CustomForms.csproj
@@ -69,6 +69,7 @@
     <Compile Include="CopyableMessageBox\CopyableMessageBox.designer.cs">
       <DependentUpon>CopyableMessageBox.cs</DependentUpon>
     </Compile>
+    <Compile Include="Platform-specific\ForceFocus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceTypeCombo\ResourceTypeCombo.cs">
       <SubType>UserControl</SubType>
