--- a/branches/wikiUpdatesNovember2010/s3pi Extras/Helpers/Helpers.csproj
+++ b/branches/wikiUpdatesNovember2010/s3pi Extras/Helpers/Helpers.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{D9B63641-D3BE-4120-9115-7D67B1238FBF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DemoPlugins</RootNamespace>
-    <AssemblyName>s3pi.DemoPlugins</AssemblyName>
+    <RootNamespace>Helpers</RootNamespace>
+    <AssemblyName>s3pi.Helpers</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>false</SignAssembly>
@@ -59,7 +59,7 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DemoPlugins.cs" />
+    <Compile Include="Helpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyVersion.cs" />
     <Compile Include="RunHelper.cs" />
