--- a/CS System Classes/CS System Classes.csproj
+++ b/CS System Classes/CS System Classes.csproj
@@ -72,6 +72,7 @@
     <Compile Include="ADependentList.cs" />
     <Compile Include="ArgumentLengthException.cs" />
     <Compile Include="AHandlerList.cs" />
+    <Compile Include="SevenBitString.cs" />
     <Compile Include="Sims3PackCRC.cs" />
     <Compile Include="FNVHash.cs" />
     <Compile Include="Properties\AssemblyVersion.cs" />
