--- a/s3pi/Interfaces/Interfaces.csproj
+++ b/s3pi/Interfaces/Interfaces.csproj
@@ -65,6 +65,7 @@
     <Compile Include="AResource.cs" />
     <Compile Include="AResourceHandler.cs" />
     <Compile Include="AResourceKey.cs" />
+    <Compile Include="BoundingBox.cs" />
     <Compile Include="SimpleList.cs" />
     <Compile Include="ConstructorParametersAttribute.cs" />
     <Compile Include="DataGridExpandableAttribute.cs" />
