--- a/branches/wikiUpdatesNovember2010/s3pi Wrappers/GenericRCOLResource/GenericRCOLResource.csproj
+++ b/branches/wikiUpdatesNovember2010/s3pi Wrappers/GenericRCOLResource/GenericRCOLResource.csproj
@@ -101,6 +101,8 @@ echo /*"*/ [assembly: AssemblyVersion(%25version%25)] /*"*/
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ARCOLBlock.cs" />
+    <Compile Include="RCOLChunkHandlers\MODL.cs" />
+    <Compile Include="RCOLChunkHandlers\MLOD.cs" />
     <Compile Include="RCOLChunkHandlers\SlotAdjust.cs" />
     <Compile Include="RCOLChunkHandlers\RSLT.cs" />
     <Compile Include="RCOLChunkHandlers\LITE.cs" />
