--- a/s3pi Wrappers/meshExpImp.ModelBlocks/meshExpImp.ModelBlocks.csproj
+++ b/s3pi Wrappers/meshExpImp.ModelBlocks/meshExpImp.ModelBlocks.csproj
@@ -10,8 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>meshExpImp.ModelBlocks</RootNamespace>
     <AssemblyName>meshExpImp.ModelBlocks</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -48,12 +49,12 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
     <Reference Include="System.Custom">
       <HintPath>..\..\s3pi\build\bin\Release\System.Custom.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
