--- a/s3pi Wrappers/MeshChunks/MeshChunks.csproj
+++ b/s3pi Wrappers/MeshChunks/MeshChunks.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>meshExpImp.ModelBlocks</RootNamespace>
-    <AssemblyName>meshExpImp.ModelBlocks</AssemblyName>
+    <AssemblyName>s3pi.MeshChunks</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
