--- a/s3pi/Interfaces/Interfaces.csproj
+++ b/s3pi/Interfaces/Interfaces.csproj
@@ -70,6 +70,7 @@
     <Compile Include="AResourceHandler.cs" />
     <Compile Include="AResourceKey.cs" />
     <Compile Include="BoundingBox.cs" />
+    <Compile Include="IndexList.cs" />
     <Compile Include="Quaternion.cs" />
     <Compile Include="DependentList.cs" />
     <Compile Include="SimpleList.cs" />
